--- a/Rotas/fotos-txt.html
+++ b/Rotas/fotos-txt.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>Tudo Sobre Google Glass </title>
-	<link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
-	<link rel="stylesheet" type="text/css" href="_css/fotos.css"/>	
+	<link rel="stylesheet" type="text/css" href="css/estilo.css"/>
+	<link rel="stylesheet" type="text/css" href="css/fotos.css"/>	
 	</head>
 
 	<script language="javascript" src="_javascript/funcoes.js"></script>
@@ -19,11 +19,11 @@
 				<nav id="menu">
 					<h1> Menu Principal </h1>
 						<ul>
-							<li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="index-txt.html">Home</a></li>
-							<li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="specs-txt.html">Especificações</a></li>
-							<li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="fotos-txt.html">Fotos</a></li>
-							<li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="multimidia-txt.html">Multimídia</a></li>
-							<li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="fale-conosco-txt.html">Fale conosco</a></li>
+							<li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="index.html">Home</a></li>
+							<li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="Rotas/specs-txt.html">Especificações</a></li>
+							<li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="Rotas/fotos-txt.html">Fotos</a></li>
+							<li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="Rotas/multimidia-txt.html">Multimídia</a></li>
+							<li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="Rotas/fale-conosco-txt.html">Fale conosco</a></li>
 						</ul>
 				</nav>
 			</header>
