--- a/multimidia-txt.html
+++ b/multimidia-txt.html
@@ -21,7 +21,7 @@
                 <nav id="menu">
                     <h1> Menu Principal </h1>
                     <ul>
-                        <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="index-txt.html">Home</a></li>
+                        <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="index.html">Home</a></li>
                         <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="specs-txt.html">Especificações</a></li>
                         <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="fotos-txt.html">Fotos</a></li>
                         <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="multimidia-txt.html">Multimídia</a></li>
